# grupo_borges

./: .gitignore  AGENTS.md  PLANO-FASE4-COCKPIT-CARD-KANBAN.md  PLANO.md  README.md  agents.yaml
.claude/agents/: daniel-research.md
apps/api/: .env.example  README.md  config.py  main.py  pyproject.toml  util.py
apps/api/db/: schema.sql  store.py
apps/api/mcp_tools/: __init__.py  spawn_subsession.py
apps/api/orchestrator/: auto_dispatcher.py  checkpoint_parser.py  jsonl_watcher.py  synthetic_message.py  tmux_driver.py  watchdog.py  worktree.py
apps/api/routers/: agents.py  ask_user.py  codex_events.py  events.py  fleet.py  hooks.py  stream.py  task_commits.py  tasks.py  tts.py
apps/api/services/: codex_reader.py  criteria_executor.py  evidence_refs.py  review_policy.py  tmux_driver.py  workspace_reader.py
apps/api/tests/: test_agent_input.py  test_agent_mcp.py  test_agent_model.py  test_agent_painel.py  test_agent_voice.py  test_bloco5_validations.py  test_codex_events.py  test_codex_reader.py  test_criteria_executor.py  test_evidence_refs.py  test_fleet_snapshot.py  test_hook_lifecycle.py  test_messages_stream.py  test_pane_stream.py  test_review_policy.py  test_spawn_subsession.py  test_synthetic_message.py  test_task_images.py  test_tmux_driver_ansi.py
apps/api/tests/fixtures/: codex_rollout_sanitized.jsonl
docs/: chat-patterns-research.md  codex-cockpit-playbook.md  jp25-mcp-ui-DESCARTAVEL.md  painel-codex-nativo-PLANO.md  refactor-playbook.md  tara-observability-research.md
scripts/: backfill-task-commits.sh  git-hook-link-commit.sh  tara-codex
(+157 files in other folders)
